5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1758_1183.log
== TEST (2019-05-27 19:30:38) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
i = 0
# Laço
while (i<size(v)):
	if (v[i] > 0:
		 v = v + 1
		 i = i +1
	print(i)
		 

-- ERROR:
File "XXXX", line 9
    if (v[i] > 0:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:30:55) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
i = 0
# Laço
while (i<size(v)):
	if (v[i] >= 0:
		 v = v + 1
		 i = i +1
	print(i)
		 

-- ERROR:
File "XXXX", line 9
    if (v[i] >= 0:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:35:12) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v[i] > 0:
		 v = v + 1
		 i = i + 1
	print(i)
		 

-- ERROR:
File "XXXX", line 10
    if (v[i] > 0:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:35:23) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v[i] > 0):
		 v = v + 1
		 i = i + 1
	print(i)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:35:43) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v[i] > 0):
		 v = v + 1
		 i = i + 1
	print(i)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:36:23) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v[i] > 0):
		v = v + 1
		i = i + 1
	print(i)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:36:26) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v[i] > 0):
		v = v + 1
		i = i + 1
	print(i)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:37:17) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 1
i = 1
# Laço
while (i<size(v)):
	if (v[i] > 0):
		v = v + 1
		i = i + 1
	print(i)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:37:26) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 1
i = 1
# Laço
while (i<size(v)):
	if (v[i] > 0):
		v = v + 1
		i = i + 1
	print(i)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:37:37) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 1
i = 1
# Laço
while (i<size(v)):
	if (v[i] > 0):
		v = v + 1
		i = i + 1
	print(i)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:37:47) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v[i] >= 0):
		v = v + 1
		i = i + 1
	print(i)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:38:13) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v[i] >= 0):
		v = v + 1
		i = i + 1
	print(i)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:38:20) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v[i] >= 0):
		v = v + 1
		i = i + 1
	print(i)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:38:32) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v[i] >= 0):
		v = v + 1
		i = i + 1
	print(i)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:38:39) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v[i] >= 0):
		v = v + 1
		i = i + 1
	print(i)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:38:58) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v[i] > 0):
		v = v + 1
		i = i + 1
	print(i)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:49:58) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v > 0):
		v = v + 1
		i = i + 1
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:50:05) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v > 0):
		v = v + 1
		i = i + 1
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:50:15) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v > 0):
		v = v + 1
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:50:40) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v > 0):
		v = v + 1
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:51:06) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
v = 0
i = 0
# Laço
while (i<size(v)):
	if (v > 0):
		v = v + 1
		i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:36:00) 
-- CODE:
# Modulo
from numpy import *
# Entradas
v = array(eval(input("Vetor: ")))
# Variaveis
i = 0
n = 0
# Laço
while (i<size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1
	
tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)
# Variavel_2
i = 0
j = 0
# Laço_2
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1
# Saida
print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
